--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap-4-react": "0.0.59",
+    "file-saver": "^2.0.2",
+    "promise-middleware": "^1.0.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-promise": "^3.0.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-tag-autocomplete": "^5.11.2",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
