--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engine" : {
+    "node":"10.16.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
